--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <h1>Your Name</h1>
+            <h1>Welcome</h1>
             <p>Web Developer | Programmer | Enthusiast</p>
         </div>
         <nav>
