--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2>About Me</h2>
         <p>Welcome to my portfolio! I am a passionate web developer and programmer. My journey into the world of coding started with curiosity, and I strive to keep learning and improving.</p>
         <div class="image-container">
-            <img src="zoro.gif" alt="Your Portrait">
+            <img src="talha.jpg" alt="Your Portrait">
         </div>
     </section>
 
