--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li>Contributor to open-source projects</li>
         </ul>
         <div class="ai-image">
-            <img src="https://via.placeholder.com/400x300" alt="AI Generated Image for Achievements">
+            <img src="https://github.com/talha7931/Talha.github.io/blob/main/WhatsApp%20Image%202024-11-15%20at%2020.12.26_b43f381c.jpg" alt="AI Generated Image for Achievements">
         </div>
     </section>
 
