--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Welcome to my portfolio! I am a passionate web developer and programmer. My journey into the world of coding started with curiosity, and I strive to keep learning and improving.</p>
+        <p>Hi, I’m Talha Shaikh, and I’m currently in my first year of pursuing a degree in Electronics and Telecommunication Engineering (ENTC) at MITAOE. From a young age, I’ve been fascinated by technology, and this curiosity led me to develop a strong passion for coding. I believe coding is not just a skill, but a way of thinking that allows me to approach problems from unique perspectives and find creative solutions.
+
+As an enthusiast in the world of programming, I’m always eager to learn new languages, frameworks, and concepts. I enjoy working on projects that challenge me and help me grow. Whether it's building small applications, working with hardware, or diving into data structures and algorithms, I’m constantly pushing myself to expand my knowledge.
+
+Beyond coding, I have a strong interest in electronics and telecommunication systems, and I’m excited to see how I can merge my technical skills with my passion for innovation. I’m also a firm believer in collaboration and enjoy working with like-minded individuals to bring ideas to life.
+
+In the future, I hope to explore various fields within engineering and technology, and I’m excited for the opportunities ahead that will allow me to learn, grow, and contribute to the world of tech.</p>
         <div class="image-container">
             <img src="talha.jpg" alt="Your Portrait">
         </div>
@@ -38,7 +44,7 @@
             <li>Contributor to open-source projects</li>
         </ul>
         <div class="ai-image">
-            <img src="https://github.com/talha7931/Talha.github.io/blob/main/WhatsApp%20Image%202024-11-15%20at%2020.12.26_b43f381c.jpg" alt="AI Generated Image for Achievements">
+            <img src="talha1.jpg" alt="AI Generated Image for Achievements">
         </div>
     </section>
 
