--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ In the future, I hope to explore various fields within engineering and technolog
         <ul>
             <li>Completed CS50’s Introduction to Computer Science – Python Track</li>
             <li>Built multiple full-stack web applications</li>
-            <li>Contributor to open-source projects</li>
+            <li>Completed Cisco Pyhton Essentials</li>
+            <img src="image.png">
         </ul>
         <div class="ai-image">
             <img src="talha1.jpg" alt="AI Generated Image for Achievements">
