--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ In the future, I hope to explore various fields within engineering and technolog
             <li>Completed CS50’s Introduction to Computer Science – Python Track</li>
             <li>Built multiple full-stack web applications</li>
             <li>Completed Cisco Pyhton Essentials</li>
-            <embed src="pyhton e1.pdf" type="application/pdf" width="100%" height="600px">
+            <embed src="python e1.pdf" type="application/pdf" width="100%" height="600px">
             <img src="image.png">
         </ul>
         <div class="ai-image">
