--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ In the future, I hope to explore various fields within engineering and technolog
         <ul>
             <li>Completed CS50’s Introduction to Computer Science – Python Track</li>
             <li>Built multiple full-stack web applications</li>
-            <li>Completed Cisco Pyhton Essentials</li>
+            <li>Completed Cisco Python Essentials</li>
         </ul>
         <div class="ai-image">
-            <img src="python e1.jpg">
+            <img src="pyhton e1.jpg">
             <img src="image.png">
             <img src="talha1.jpg" alt="AI Generated Image for Achievements">
         </div>
