--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section id="intro-video" class="video-container">
+    <iframe 
+        src="https://www.youtube.com/embed/pJxeyK7it0o?autoplay=1&mute=1&rel=0"
+        title="Nature Video Intro"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+    </iframe>
+    </section>
     <header>
         <div class="logo">
             <h1>Welcome</h1>
@@ -21,8 +29,7 @@
             </ul>
         </nav>
     </header>
-
-    <section id="about">
+  <section id="about">
         <h2>About Me</h2>
         <p>Hi, I’m Talha Shaikh, and I’m currently in my first year of pursuing a degree in Electronics and Telecommunication Engineering (ENTC) at MITAOE. From a young age, I’ve been fascinated by technology, and this curiosity led me to develop a strong passion for coding. I believe coding is not just a skill, but a way of thinking that allows me to approach problems from unique perspectives and find creative solutions.
 
