--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
         </nav>
     </header>
   <section id="about">
+    <div class="video-background">
+        <iframe 
+            src="https://www.youtube.com/embed/pJxeyK7it0o?autoplay=1&mute=1&loop=1&playlist=pJxeyK7it0o&rel=0"
+            title="Nature Video Intro"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+        </iframe>
+    </div>
+    
+    <div class="about-content">
         <h2>About Me</h2>
         <p>Hi, I’m Talha Shaikh, and I’m currently in my first year of pursuing a degree in Electronics and Telecommunication Engineering (ENTC) at MITAOE. From a young age, I’ve been fascinated by technology, and this curiosity led me to develop a strong passion for coding. I believe coding is not just a skill, but a way of thinking that allows me to approach problems from unique perspectives and find creative solutions.
 
@@ -37,7 +47,7 @@ As an enthusiast in the world of programming, I’m always eager to learn new la
 
 Beyond coding, I have a strong interest in electronics and telecommunication systems, and I’m excited to see how I can merge my technical skills with my passion for innovation. I’m also a firm believer in collaboration and enjoy working with like-minded individuals to bring ideas to life.
 
-In the future, I hope to explore various fields within engineering and technology, and I’m excited for the opportunities ahead that will allow me to learn, grow, and contribute to the world of tech.</p>
+In the future, I hope to explore various fields within engineering and technology, and I’m excited for the opportunities ahead that will allow me to learn, grow, and contribute to the world of tech.</p></div>
         <div class="image-container">
             <img src="talha.jpg" alt="Your Portrait">
         </div>
