--- a/index.html
+++ b/index.html
@@ -22,16 +22,6 @@
         </nav>
     </header>
   <section id="about">
-    <div class="video-background">
-        <iframe 
-            src="https://www.youtube.com/embed/pJxeyK7it0o?autoplay=1&mute=1&loop=1&playlist=pJxeyK7it0o&rel=0"
-            title="Nature Video Intro"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen>
-        </iframe>
-    </div>
-    
-    <div class="about-content">
         <h2>About Me</h2>
         <p>Hi, I’m Talha Shaikh, and I’m currently in my first year of pursuing a degree in Electronics and Telecommunication Engineering (ENTC) at MITAOE. From a young age, I’ve been fascinated by technology, and this curiosity led me to develop a strong passion for coding. I believe coding is not just a skill, but a way of thinking that allows me to approach problems from unique perspectives and find creative solutions.
 
@@ -77,7 +67,10 @@ In the future, I hope to explore various fields within engineering and technolog
     </section>
 
     <footer>
-        <p>&copy; 2025 Your Name | All Rights Reserved</p>
+        <p>&copy; 2025 Mohammad Talha| All Rights Reserved</p>
     </footer>
+    <video autoplay muted loop playsinline>
+    <source src="https://raw.githubusercontent.com/your-username/your-repo/main/7563979-hd_1920_1080_30fps.mp4" type="video/mp4">
+</video>
 </body>
 </html>
