--- a/index.html
+++ b/index.html
@@ -65,12 +65,16 @@ In the future, I hope to explore various fields within engineering and technolog
             <button type="submit">Send Message</button>
         </form>
     </section>
+    
+<section class="video-section">
+  <video autoplay muted loop playsinline>
+    <source src="7563979-hd_1920_1080_30fps.mp4" type="video/mp4">
 
+  </video>
+</section>
     <footer>
         <p>&copy; 2025 Mohammad Talha| All Rights Reserved</p>
     </footer>
-    <video autoplay muted loop playsinline>
-    <source src="https://raw.githubusercontent.com/your-username/your-repo/main/7563979-hd_1920_1080_30fps.mp4" type="video/mp4">
 </video>
 </body>
 </html>
